# VTM

./: CMakeLists.txt  CMakePresets.json  README.md  VMT.pro  techstack.md  techstack.yml
VirtualTuringMachine/: .qmake.stash  CMakeLists.txt  Info.plist  Makefile  MyAppInfo.plist  VMTAlphabit.cpp  VMTAlphabit.h  VMTLine.cpp  VMTLine.h  VMTSerializer.cpp  VMTSerializer.h  VMTTransitionConditions.cpp  VMTTransitionConditions.h  VMTTransitionImpl.cpp  VMTTransitionImpl.h  VirtualTuringMachine.pro  clickablelabel.cpp  clickablelabel.h  configuration-DESKTOP-0NJ84K8.cpp  configuration-DESKTOP-0NJ84K8.h  configuration.cpp  configuration.h  exercise.cpp  exercise.h  flowlayout.cpp  formactionhint.cpp  formactionhint.h  formactionhint.ui  formalphabit.cpp  formalphabit.h  formalphabit.ui  formbase.h  formcalculator.cpp  formcalculator.h  formcalculator.ui  formcompilermachine.cpp  formcompilermachine.h  formcompilermachine.ui  formcomplexmachines.cpp  formcomplexmachines.h  (+99 more)
VirtualTuringMachine/android-sources/: AndroidManifest.xml
VirtualTuringMachine/config/: exercises.xml
VirtualTuringMachine/images/: app.icns
VirtualTuringMachine/interfaces/: IVMDebugEnabler.h  IVMTAction.h  IVMTActionController.h  IVMTAlphabitSource.h  IVMTCalculatorCallback.h  IVMTCompilerCallback.h  IVMTComplexMachineSource.h  IVMTDebugerCallback.h  IVMTEnvironment.h  IVMTLineObserver.h  IVMTMachine.h  IVMTProjectMachineReplacer.h  IVMTTransition.h  ivmtdebuger.h  ivmtundoobserver.h
VirtualTuringMachine/vmtactions/: vmtactioncreateandconnect.cpp  vmtactioncreateandconnect.h  vmtactiondelete.cpp  vmtactiondelete.h  vmtactionlink.cpp  vmtactionlink.h  vmtactionmachine.cpp  vmtactionmachine.h  vmtactionpointer.cpp  vmtactionpointer.h  vmtactiontranslate.cpp  vmtactiontranslate.h
VirtualTuringMachine/vmtexport4th/: vmtexport4th.cpp  vmtexport4th.h
VirtualTuringMachine/vmtmachines/: VMTComplexMachine.cpp  VMTComplexMachine.h  VMTComplexMachineInner.cpp  VMTComplexMachineInner.h  VMTMachineAlpha.cpp  VMTMachineAlpha.h  VMTMachineStub.cpp  VMTMachineStub.h  vmtmachinecopy.cpp  vmtmachinecopy.h  vmtmachinefinish.cpp  vmtmachinefinish.h  vmtmachineleft.cpp  vmtmachineleft.h  vmtmachineleftword.cpp  vmtmachineleftword.h  vmtmachineright.cpp  vmtmachineright.h  vmtmachinerightword.cpp  vmtmachinerightword.h  vmtmachinestart.cpp  vmtmachinestart.h
